# rustversion-detect

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benchcompile/: .gitignore  RESULTS.md
benchcompile/build-rustversion/: Cargo.toml  build.rs
benchcompile/build-rustversion-detect/: Cargo.toml  build.rs
benchcompile/build-rustversion-detect/src/: main.rs
benchcompile/runtime-rustversion/: Cargo.toml
benchcompile/runtime-rustversion/src/: main.rs
src/: date.rs  lib.rs  macros.rs  version.rs
tests/: test_const.rs  test_parse.rs
