[package]
name = "rustversion-detect"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Techcable"]
build = "build/build.rs"
categories = ["development-tools::build-utils", "no-std", "no-std::no-alloc"]
description = "Detect rustc compiler version"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Techcable/rustversion-detect"
# First version supporting Rust 2018
rust-version = "1.31"

[package.metadata.cdocs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
